# bevy-exercises

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
assets/dgrid/: game.level.yaml
assets/gltf/: kid.gltf  parse.py  wpn.gltf
assets/sheet/: actor-0.actor.yaml  actor-1.actor.yaml  actor-10.actor.yaml  actor-11.actor.yaml  actor-12.actor.yaml  actor-13.actor.yaml  actor-14.actor.yaml  actor-15.actor.yaml  actor-16.actor.yaml  actor-2.actor.yaml  actor-3.actor.yaml  actor-4.actor.yaml  actor-5.actor.yaml  actor-6.actor.yaml  actor-7.actor.yaml  actor-8.actor.yaml  actor-9.actor.yaml  game.level.yaml
assets/ugrid/: game.level.yaml
common/: Cargo.toml
common/src/: animation.rs  assets.rs  bundle.rs  camera.rs  level.rs  lib.rs  meta.rs  mover.rs
dgrid/: Cargo.toml
dgrid/src/: action.rs  actor.rs  animation.rs  camera.rs  dgrid.rs  hero.rs  info.rs  level.rs  main.rs
gltf/: Cargo.toml
gltf/src/: actor.rs  main.rs
hello/: Cargo.toml
hello/src/: main.rs
sheet/: Cargo.toml
sheet/src/: action.rs  actor.rs  animation.rs  assets.rs  camera.rs  hero.rs  info.rs  main.rs  meta.rs  scene.rs
ugrid/: Cargo.toml
ugrid/src/: action.rs  actor.rs  assets.rs  camera.rs  hero.rs  info.rs  level.rs  main.rs  meta.rs  mover.rs  ugrid.rs
