[package]
name = "dgrid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
grid = { git = "https://github.com/vagra/grid.git" }
common = { path = "../common", version = "0.1" }
bevy-inspector-egui = { version = "0.23" }